--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -3508,9 +3508,10 @@
             border: 1px solid #d2d2d7;
             border-radius: 4px;
             font-size: 11px;
-            resize: vertical;
+            resize: none;
             font-family: inherit;
             line-height: 1.6;
+            overflow-y: hidden;
         }
 
         @media print {
@@ -5106,7 +5107,7 @@
             <a href="javascript:void(0)" onclick="location.reload();"
                 style="display:flex;align-items:center;gap:10px;text-decoration:none;cursor:pointer;">
                 <img src="source_icon.png" alt="DJ" style="width:40px;height:40px;border-radius:8px;">
-                <div class="logo-text">DESIGN JIG</div>
+                <div class="logo-text" style="font-size: 14px;">디자인지그</div>
             </a>
         </div>
         <div class="header-actions">
@@ -6122,9 +6123,10 @@
                                         <div class="amount" id="estimateVat">₩ 0</div>
                                     </div>
                                     <div class="total-row main"
-                                        style="margin-top:12px; padding-top:12px; border-top:1px solid #e5e5ea;"><label
-                                            style="font-size:16px;">총 견적금액</label>
-                                        <div class="amount" id="estimateTotal" style="font-size:20px; color:#0071e3;">₩
+                                        style="margin-top:12px; padding:16px; border-top:none; background: #0071e3; border-radius: 8px; color: white;">
+                                        <label style="font-size:16px; font-weight: 600;">총 견적금액</label>
+                                        <div class="amount" id="estimateTotal"
+                                            style="font-size:20px; font-weight: 700; color:white;">₩
                                             0</div>
                                     </div>
                                 </div>
@@ -19063,14 +19065,16 @@
             </svg>
             <span>뒤로</span>
         </button>
-        <button class="primary" onclick="mobileReconnect()">
+        <button class="primary" onclick="navigateToChecklist()">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8" />
-                <path d="M21 3v5h-5" />
-                <path d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16" />
-                <path d="M8 16H3v5" />
+                <line x1="8" y1="6" x2="21" y2="6"></line>
+                <line x1="8" y1="12" x2="21" y2="12"></line>
+                <line x1="8" y1="18" x2="21" y2="18"></line>
+                <line x1="3" y1="6" x2="3.01" y2="6"></line>
+                <line x1="3" y1="12" x2="3.01" y2="12"></line>
+                <line x1="3" y1="18" x2="3.01" y2="18"></line>
             </svg>
-            <span>불러오기</span>
+            <span>체크리스트</span>
         </button>
         <button onclick="navigateToEstimate()">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
@@ -19723,6 +19727,18 @@
         // 3. Toast UI Enhancement (Faster Disappear)
         // Overwrite existing showToast to ensure timing behavior
         window.showToast = function (message, type = 'info') {
+            // [Filter] Only show toasts for:
+            // 1. Errors and Warnings
+            // 2. Actions related to 'Save' (저장)
+            // 3. Actions related to 'Notion' (노션)
+            const isImportant = type === 'error' || type === 'warning';
+            const isSaveRelated = message && (message.includes('저장') || message.includes('Save'));
+            const isNotionRelated = message && (message.includes('노션') || message.includes('Notion'));
+
+            if (!isImportant && !isSaveRelated && !isNotionRelated) {
+                return; // Suppress other notifications
+            }
+
             const toast = document.getElementById('toast');
             if (!toast) return;
 
